--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background: var(--main-gradient-color);
-  min-height: 100vh;
+  /* min-height: calc(var(--vh) * 100); 설정 시 자식 element가 height: 100% 해도 not working! */
+  /* min-height 와 height는 결이 다른 property 인 듯 */
+  height: calc(var(--vh) * 100);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
