FEAT: modal component 개발, 디자인 변경

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -3,4 +3,8 @@
   /* min-height 와 height는 결이 다른 property 인 듯 */
   height: calc(var(--vh) * 100);
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./asset/Honeydew.jpg);
+  background-size: cover;
 }
