--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,10 +1,20 @@
 .App {
   /* min-height: calc(var(--vh) * 100); 설정 시 자식 element가 height: 100% 해도 not working! */
   /* min-height 와 height는 결이 다른 property 인 듯 */
-  height: calc(var(--vh) * 100);
+  height: 100vh;
+  /* height: 100vh; */
+  padding-left: 16px;
+  padding-right: 16px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url(./asset/Honeydew.jpg);
-  background-size: cover;
+  flex-direction: column;
+  background-color: #8ec5fc;
+  background-image: linear-gradient(
+    62deg,
+    #8ec5fc 0%,
+    #e0c3fc 50%,
+    #95f2ff 100%
+  );
+
+  /* background-image: url(./asset/Honeydew.jpg);
+  background-size: cover; */
 }
