--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11,16 +11,19 @@
   --background-color: #f0f0f3;
   --logo-background-color: rgb(232, 181, 5);
   --logo-box-color: rgb(255, 222, 89);
+  --font-sub-color: #939393;
 }
 
 * {
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   font-family: "SUIT-Medium";
 }
