FEAT: Feat Qrcode Component and welcome page

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -12,6 +12,7 @@
     #e0c3fc 50%,
     #95f2ff 100%
   );
+  position: relative;
 
   /* background-image: url(./asset/Honeydew.jpg);
   background-size: cover; */
