--- a/front/src/App.css
+++ b/front/src/App.css
@@ -5,15 +5,40 @@
   /* height: 100vh; */
   display: flex;
   flex-direction: column;
-  background-color: #8ec5fc;
+  /* background-color: #8ec5fc;
   background-image: linear-gradient(
     62deg,
     #8ec5fc 0%,
     #e0c3fc 50%,
     #95f2ff 100%
-  );
+  ); */
   position: relative;
 
   /* background-image: url(./asset/Honeydew.jpg);
   background-size: cover; */
+}
+
+.video-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -100;
+  overflow: hidden;
+}
+.video-container video {
+  /* Make video to at least 100% wide and tall */
+  min-width: 100%;
+  min-height: 100%;
+
+  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+  width: auto;
+  height: auto;
+
+  /* Center the video */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
